fixed scrollbars on pgp blocks | close #45

--- a/src/chrome/gmail_elements/gmail_elements.css
+++ b/src/chrome/gmail_elements/gmail_elements.css
@@ -1,6 +1,6 @@
 
 /* body */
-body { font-family: arial,sans-serif; font-size: 12.8px; padding:0px; margin: 0px; background-color: #FFF; }
+body { font-family: arial,sans-serif; font-size: 12.8px; padding:0px; margin: 0px; background-color: #FFF; word-wrap: break-word; }
 html {  padding:0px; margin: 0px; }
 table, tbody, tr, td { border-collapse: collapse; font-size: inherit; border: none; border-image-width: 0px;
   -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; vertical-align: top; }
@@ -30,7 +30,7 @@ table#compose td.bottom div#send_btn { text-transform: uppercase; display: inlin
 table#compose .close_new_message i.ion-android-close { font-size: 27px; top: 10px!important; color: white; margin-top: -5px; }
 table#compose td.bottom div#send_btn_note { display: inline-block; font-size: 12.8px; padding-left: 5px; }
 table#compose td div#input_text { border: none; overflow: none; padding-top:8px; padding-left:8px; outline: none; border: none !important; -webkit-box-shadow: none !important;
-  -moz-box-shadow: none !important; box-shadow: none !important; height:100%; }
+  -moz-box-shadow: none !important; box-shadow: none !important; height:100%; word-wrap: break-word; }
 table#compose .fa-close { font-size: 20px; margin-top: -1px; }
 table#compose #send_btn i { font-size: 20px; }
 table#compose #send_btn .fa-lock, #send_btn  .fa-unlock { position: relative; left: -3px; top: 3px; }
